--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8"
+        <title>Code HTML hoc ky 2</title>
+    </head>
+    <body>
+      <h1>lớp 12a7</hi>
