--- a/index.html
+++ b/index.html
@@ -5,4 +5,10 @@
         <title>Code HTML hoc ky 2</title>
     </head>
     <body>
-      <h1>lớp 12a7</hi>
+      <h1>lớp 12a7</h1>
+      <h2>Hoten</h2>
+      <h3>Bai tap f1 </h3>
+      <h4><a href="baitapf1/hinh3.html"</h4>
+      <h1>
+      <h1>
+      <h1
