Correct Hinh5 link in index.html
Fix link formatting for Hinh5 in index.html

--- a/index.html
+++ b/index.html
@@ -11,4 +11,5 @@
       <h4><a href="D:\12a7-longdai\hinh3.html">hinh 3</a></h4>
       <h4><a href="D:\12a7-longdai\hinh4.html">hinh4 </a></h4>
        <h4><a href="D:\12a7-longdai\hinh5.html"Hinh5 ></a></h4>
+        <h4><a href=""Hinh5 ></a></h4>
        
