--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
       <h3>Bai tap f1 </h3>
       <h4><a href="baitapf1/hinh3.html">hinh 3</a></h4>
       <h4><a href="baitapf1/hinh4.html">hinh4 </a></h4>
-       <h4><a href="D:\12a7-longdai\hinh5.html"Hinh5 ></a></h4>
-        <h4><a href="baitapf1/hinh6.html"Hinh5 ></a></h4>
+       <h4><a href="baitapf1/hinh5.html"Hinh5 </a></h4>
+        <h4><a href="baitapf1/hinh6.html"Hinh6 </a></h4>
        
