--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8"
@@ -8,8 +8,11 @@
       <h1>lớp 12a7</h1>
       <h2>Hoten</h2>
       <h3>Bai tap f1 </h3>
-      <h4><a href="baitapf1/hinh3.html">hinh 3</a></h4>
-      <h4><a href="baitapf1/hinh4.html">hinh4 </a></h4>
-       <h4><a href="baitapf1/hinh5.html">Hinh5 </a></h4>
-        <h4><a href="baitapf1/hinh6.html">Hinh6 </a></h4>
+      <h4><a href="D:\12a7-longdai\hinh3.html">hinh 3</a></h4>
+      <h4><a href="D:\12a7-longdai\hinh4.html">hinh4 </a></h4>
+       <h4><a href="D:\12a7-longdai\hinh5.html">Hinh5 </a></h4>
+        <h4><a href="D:\12a7-longdai\hinh6.html">Hinh6 </a></h4>
+        <h4><a href="D:\12a7-longdai\hinh7.html">Hinh7 </a></h4>
+    </body>
+    /</html>
        
