--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8"
@@ -13,6 +13,11 @@
        <h4><a href="D:\12a7-longdai\hinh5.html">Hinh5 </a></h4>
         <h4><a href="D:\12a7-longdai\hinh6.html">Hinh6 </a></h4>
         <h4><a href="D:\12a7-longdai\hinh7.html">Hinh7 </a></h4>
+        <h3>Bài tập F2 </h3>
+        <h4><a href="D:\12a7-longdai\hinh2.html">Hinh2 </a></h4>
+        <h4><a href="D:\12a7-longdai\hinh3f2.html">Hinh3</a></h4>
+
+
+
     </body>
     /</html>
-       
