--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
         <h3>Bài tập F2 </h3>
         <h4><a href="D:\12a7-longdai\hinh2.html">Hinh2 </a></h4>
         <h4><a href="D:\12a7-longdai\hinh3f2.html">Hinh3</a></h4>
-
+        <h4><a href="D:\12a7-longdai\hinh4f2.html">hinh4</a></h4>
+        <h4><a href="D:\12a7-longdai\hinh5f2.html">hinh5</a></h4>
+        <h4><a href="D:\12a7-longdai\hinh6f2.html">hinh6</a></h4>
+        <h4><a href="D:\12a7-longdai\hinh7f2.html">hinh7</a></h4>
 
 
     </body>
-    /</html>
+    </html>
